<resources>
    <string name="app_name">facturApp</string>
    <string name="title_active_login">FacturApp Login</string>
    <string name="password">Contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="current_password">Contraseña actual</string>
    <string name="name">Nombre completo</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="repeat_password">Confirma la contraseña</string>
    <string name="signup">Sign Up</string>
    <string name="text_signup">¿No tienes cuenta?</string>
    <string name="link_signup">Regístrate</string>
    <string name="all">TODO</string>
    <string name="user_email">userdefault@gmail.com</string>
    <string name="user_name">User Default</string>
    <string name="update_profile">Guardar</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="forget_password">¿Olvidaste tu contraseña?</string>
    <string name="title_check_email">Verificación de Email</string>
    <string name="subtitle_check_email">Para completar su registro, ¡Por favor! verifique su correo y después de clic en continuar.</string>
    <string name="continue_check_email">Continuar</string>
    <string name="title_account_recovery">Recuperación de la cuenta</string>
    <string name="subtitle_account_recovery">Ingresa tu email para que se te pueda enviar un correo con los pasos para cambiar tu contraseña.</string>
    <string name="recovery_account">Enviar</string>
    <string name="title_update_password">Cambio de contraseña</string>
    <string name="subtitle_update_password">Por motivos de seguridad para cambiar tu contraseña, primero debes ingresar tu contraseña actual.</string>
    <string name="title_delete_account">Eliminar cuenta</string>
    <string name="subtitle_delete_account">Por motivos de seguridad para eliminar tu cuenta por completo, debes de ingresar tu contraseña.</string>
    <string name="delete">Eliminar</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="detalles_de_empresa">Detalles de empresa</string>
    <string name="clientes">Clientes</string>
    <string name="pagos">Pagos</string>
    <string name="configuracion">Configuración</string>
    <string name="informacion_del_programa">información del programa</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>

    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <string name="a_adir_cliente">Añadir cliente</string>
    <string name="telefono_movil">Teléfono Móvil</string>
    <string name="informacion_comercial">Información Comercial</string>
    <string name="fax">Fax</string>
    <string name="direccion">Dirección</string>
    <string name="telefono_fijo">Teléfono Fijo</string>
    <string name="guardar_cliente_nuevo">Guardar cliente nuevo</string>
    <string name="descripci_n">Descripción</string>
    <string name="costo_unitario">Costo Unitario</string>
    <string name="cantidad">Cantidad</string>
    <string name="monto">Monto</string>
    <string name="direccion_de_paypal">Dirección de PayPal</string>
    <string name="cheques_a_nombre_de">Cheques a nombre de</string>
    <string name="transferencia_bancaria">Transferencia bancaria</string>
    <string name="notas_adicionales">Notas adicionales</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="crear_factura">Crear Factura</string>
    <string name="id">ID</string>
    <string name="nombre">Nombre</string>
    <string name="descripcion">Descripción</string>
    <string name="_500">$0.00</string>
    <string name="telefono">Teléfono</string>
    <string name="nombre_del_negocio">Nombre del negocio</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="campos_opcionales">(Campos opcionales)</string>
    <string name="registrar">Registrar</string>
    <string name="otros_detalles">Otros detalles</string>
    <string name="guardar_detalles_del_pago">Guardar detalles del pago</string>
    <string name="OpcionesPago">Opciones de Pago</string>
    <string name="CrearCliente">Crear cliente</string>
    <string name="Menuprincipal">Menú Principal</string>
    <string name="todo">Todo</string>
    <string name="pendiente">Pendiente</string>
    <string name="pagado">Pagado</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="email_de_paypal">Email de paypal</string>
    <string name="introduzca_su_correo_electronico_de_paypal">Introduzca su correo electrónico de paypal</string>
    <string name="haz_los_cheques_a_nombre_de">Haz los cheques a nombre de</string>
    <string name="usted_o_el_nombre_de_su_empresa">Usted o el nombre de su empresa</string>
    <string name="numeros_de_cuentas_bancarias_y_otros_detalles">Números de cuentas bancarias y otros detalles</string>
    <string name="otros">Otros</string>
    <string name="instrucciones_de_pago_adicionales">Instrucciones de pago adicionales</string>
    <string name="recupera_tu_contrase_a">Recupera tu contraseña</string>
    <string name="te_estaremos_enviando_un_correo_electronico_con_las_instrucciones_para_cambiar_tu_contrase_a">Te estaremos enviando un correo electrónico con las instrucciones para cambiar tu contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="datos_de_empresa">Datos de empresa</string>
    <string name="logotipo_comercial">Logotipo Comercial</string>
    <string name="nombre_del_due_o_de_la_empresa">Nombre del dueño de la empresa</string>
    <string name="numero_de_negocio">Numero de negocio</string>
    <string name="direccion_linea_1">Dirección línea 1</string>
    <string name="direccion_linea_2">Dirección línea 2</string>
    <string name="direccion_linea_3">Dirección línea 3</string>
    <string name="sitio_web">Sitio Web</string>
    <string name="actualizar_datos">Actualizar datos</string>
    <string name="presupuesto">Presupuesto</string>
    <string name="para_cliente">Para: Cliente</string>
    <string name="subtotal">Subtotal</string>
    <string name="_0_00">$0.00</string>
    <string name="descuentos">Descuentos</string>
    <string name="impuestos">Impuestos</string>
    <string name="total">Total</string>
    <string name="saldo_pendiente">Saldo Pendiente</string>
    <string name="anadir_fotos_opcional">Anadir Fotos (Opcional)</string>
    <string name="instrucciones_de_pago">Instrucciones de pago</string>
    <string name="firma">Firma</string>
    <string name="notas">Notas</string>
    <string name="crear_presupuesto">Crear Presupuesto</string>
    <string name="CrearFatura">Crear Factura</string>
    <string name="num_factura_1">Num Factura 1</string>
    <string name="vence_a_la_entrega">Vence a la entrega</string>
    <string name="cliente">Cliente:</string>
    <string name="anadir_articulos">Anadir artículos</string>
    <string name="total_parcial">Total Parcial:</string>
    <string name="saldo_adeudado">Saldo adeudado:</string>
    <string name="opciones_de_pago_transferencia_bancaria_paypal_etc">Opciones de pago(transferencia bancaria, Paypal,etc.)</string>
    <string name="guardar_factura">Guardar Factura</string>
    <string name="clientee">Cliente</string>
    <string name="datos_de_cliente">Datos de cliente</string>
    <string name="contacto">Contacto</string>
    <string name="AnadirArticulo">Añadir articulo</string>
    <string name="detalles_adicionales">Detalles Adicionales</string>
    <string name="guardar_articulo">Guardar Articulo</string>
    <string name="guardar_en_mis_articulos_para_futuras_facturas">Guardar en mis artículos para futuras facturas</string>
    <string name="nombre_de_factura">Nombre de Factura</string>
</resources>