<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >


            <androidx.appcompat.widget.Toolbar

                android:id="@+id/btn_CrearFacturaAppBar"
                android:layout_width="match_parent"
                app:title="@string/AnadirArticulo"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white">



            </androidx.appcompat.widget.Toolbar>



        </com.google.android.material.appbar.AppBarLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/black" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"

        app:startIconTint="@color/black"
        app:endIconMode="clear_text"
        android:layout_margin="@dimen/dmnArticulo"
        android:hint="@string/descripci_n"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:id="@+id/et_Descripcion"
            android:inputType="text"
            android:maxLength="150"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        app:startIconTint="@color/black"
        app:endIconMode="clear_text"
        android:layout_margin="@dimen/dmnArticulo"
        android:hint="@string/costo_unitario"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:id="@+id/et_Costo_Unitario"
            android:inputType="numberDecimal"
            android:maxLength="450"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        app:startIconTint="@color/black"
        app:endIconMode="clear_text"
        android:layout_margin="@dimen/dmnArticulo"
        android:hint="@string/cantidad"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:id="@+id/et_Cantidad"
            android:inputType="numberDecimal"
            android:maxLength="450"
            />

    </com.google.android.material.textfield.TextInputLayout>




<LinearLayout

android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="horizontal">

<com.google.android.material.textview.MaterialTextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dmnArticulo"
    android:text="@string/monto"
    android:textStyle="bold"
    android:textColor="@color/black"
    android:textSize="20dp"/>

    <TextView
        android:id="@+id/tv_Monto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:text="$0.00"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20dp"/>


</LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="10dp"
        android:background="@color/black" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        app:startIconTint="@color/black"
        app:endIconMode="clear_text"
        android:layout_margin="@dimen/dmnArticulo"
        android:hint="@string/detalles_adicionales"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:id="@+id/et_otrosDetalles"
            android:maxLength="100"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_GuardarArticulo"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_margin="@dimen/PadEt"
        android:backgroundTint="@color/Gris"
        android:clickable="true"
        android:text="@string/guardar_articulo"
        android:textAlignment="center"
        android:textAllCaps="false" />


</LinearLayout>
