<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >


            <androidx.appcompat.widget.Toolbar

                android:id="@+id/btn_CrearFacturaAppBar"
                android:layout_width="match_parent"
                app:title="@string/CrearCliente"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white">



            </androidx.appcompat.widget.Toolbar>



        </com.google.android.material.appbar.AppBarLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/black" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_baseline_account_box_24"
            app:startIconTint="@color/black"
            app:endIconMode="clear_text"
            android:layout_margin="@dimen/PadEt"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:id="@+id/et_Nombre"

                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/black"
            app:endIconMode="clear_text"
            android:layout_margin="@dimen/PadEt"
            android:hint="@string/correo_electronico"
            android:inputType="textPersonName"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:id="@+id/et_CorreoElectronico"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_baseline_phone_iphone_24"
            app:startIconTint="@color/black"
            app:endIconMode="clear_text"
            android:layout_margin="@dimen/PadEt"
            android:hint="@string/telefono_movil"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:id="@+id/et_telefonoMovil"
                android:inputType="phone"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_baseline_local_phone_24"
            app:startIconTint="@color/black"
            app:endIconMode="clear_text"
            android:layout_margin="@dimen/PadEt"
            android:hint="@string/telefono_fijo"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:id="@+id/et_TelefonoFijo"
                android:inputType="phone"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_fax"
            app:startIconTint="@color/black"
            app:endIconMode="clear_text"
            android:layout_margin="@dimen/PadEt"
            android:hint="@string/fax"
            android:inputType="textPersonName"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:id="@+id/et_fax"
                android:inputType="phone"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_baseline_account_box_24"
            app:startIconTint="@color/black"
            app:endIconMode="clear_text"
            android:layout_margin="@dimen/PadEt"
            android:hint="@string/direccion"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:id="@+id/et_Direccion"

                android:inputType="textPostalAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_GuardarClienteNuevo"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_margin="@dimen/PadEt"
        android:backgroundTint="#808080"
        android:clickable="true"
        android:text="@string/guardar_cliente_nuevo"
        android:textAlignment="center"
        android:textAllCaps="false" />

</LinearLayout>
