<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:contentDescription="@string/all"
            app:srcCompat="@drawable/ic_baseline_mood_bad_24"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/etSubtotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/recupera_tu_contrase_a"
            android:textColor="@color/black"
            android:textSize="24sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#808080"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="32dp">

        </View>
        <TextView
            android:id="@+id/tvSubtotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:gravity="center"
            android:text="@string/te_estaremos_enviando_un_correo_electronico_con_las_instrucciones_para_cambiar_tu_contrase_a"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#808080"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="32dp">

        </View>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="45dp"
        app:layout_constraintBottom_toTopOf="@id/tvSubtotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="NotSibling">



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/black"
            app:endIconMode="clear_text"
            android:layout_margin="@dimen/PadEt"
            android:hint="@string/contrase_a"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:id="@+id/et_emailRecovery"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <ProgressBar
            android:id="@+id/BarraProgreso3"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="219dp"
            android:layout_height="38dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btn_registrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPostalAddress" />

        <Button
            android:id="@+id/btn_EnviarRecovery"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textAllCaps="false"
            android:layout_marginTop="32dp"
            android:paddingLeft="64dp"
            android:paddingRight="64dp"
            android:text="@string/iniciar_sesion"
            android:textColor="@color/black"
            android:backgroundTint="@color/GrisButon"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>